Improve configuration and add tests

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 2em; }
     form { margin-bottom: 1em; }
+    ul#timeline { list-style: none; padding: 0; }
+    ul#timeline li { margin-bottom: 0.5em; }
+    button { margin-left: 0.5em; }
   </style>
 </head>
 <body>
